@@ -24,7 +24,7 @@ import com.apple.foundationdb.relational.api.Options;
 import com.apple.foundationdb.relational.util.Assert;
 import com.apple.foundationdb.relational.yamltests.CustomYamlConstructor;
 import com.apple.foundationdb.relational.yamltests.Matchers;
-import com.apple.foundationdb.relational.yamltests.YamsqlReference;
+import com.apple.foundationdb.relational.yamltests.YamlReference;
 import com.apple.foundationdb.relational.yamltests.YamlConnection;
 import com.apple.foundationdb.relational.yamltests.YamlExecutionContext;
 import com.apple.foundationdb.relational.yamltests.command.Command;
@@ -333,8 +333,8 @@ public final class TestBlock extends ConnectedBlock {
         }
     }
 
-    public static ImmutableList<Block> parse(int blockNumber, @Nonnull final YamsqlReference reference, @Nonnull final Object document,
-                                             @Nonnull final YamlExecutionContext executionContext) {
+    public static List<Block> parse(int blockNumber, @Nonnull final YamlReference reference, @Nonnull final Object document,
+                                    @Nonnull final YamlExecutionContext executionContext) {
         try {
             // Since `options` is also a top-level block, the `CustomYamlConstructor` will add the line numbers,
             // changing it from a `String` to a `LinedObject` so that we know the line numbers when logging an error,
@@ -361,7 +361,7 @@ public final class TestBlock extends ConnectedBlock {
                                      ? Matchers.string(testsMap.get(TEST_BLOCK_NAME)) : "unnamed-" + blockNumber;
             final var testsObject = Matchers.notNull(testsMap.get(TEST_BLOCK_TESTS), "‼️ tests not found at " + reference);
             if (!options.supportedVersionCheck.isSupported()) {
-                return ImmutableList.of(new SkipBlock(reference, options.supportedVersionCheck.getMessage()));
+                return List.of(new SkipBlock(reference, options.supportedVersionCheck.getMessage()));
             }
             var randomGenerator = new Random(options.seed);
             final var executables = new ArrayList<Consumer<YamlConnection>>();
@@ -406,7 +406,7 @@ public final class TestBlock extends ConnectedBlock {
         }
     }
 
-    private TestBlock(@Nonnull final YamsqlReference reference, @Nonnull final String blockName, @Nonnull final List<QueryCommand> queryCommands,
+    private TestBlock(@Nonnull final YamlReference reference, @Nonnull final String blockName, @Nonnull final List<QueryCommand> queryCommands,
                       @Nonnull final List<Consumer<YamlConnection>> executables,
                       @Nonnull final List<Consumer<YamlConnection>> executableTestsWithCacheCheck, @Nonnull final URI connectionURI,
                       @Nonnull final TestBlockOptions options, @Nonnull final YamlExecutionContext executionContext) {
